riscv: unmatched: u-boot, opensbi
- u-boot with patches from meta-sifive applied
- opensbi with patches from meta-sifive applied

This compiles "canonical" u-boot for Unmatched, which boots from MMC1
only. It looks like currently there is no such option to boot from QSPI
Flash.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "riscv-gnu-toolchain"]
 	path = riscv-gnu-toolchain
 	url = https://github.com/riscv/riscv-gnu-toolchain
+[submodule "u-boot"]
+	path = u-boot
+	url = ssh://git@b.yadro.com:7999/~n.shubin/u-boot-unmatched.git
+[submodule "opensbi"]
+	path = opensbi
+	url = ssh://git@b.yadro.com:7999/~n.shubin/opensbi-unmatched.git
