klibc: klibc-2.0.9-1-ge0039c9a
Signed-off-by: Nikita Shubin <n.shubin@yadro.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "opensbi"]
 	path = opensbi
 	url = ssh://git@b.yadro.com:7999/~n.shubin/opensbi-unmatched.git
+[submodule "klibc"]
+	path = klibc
+	url = git://git.kernel.org/pub/scm/libs/klibc/klibc.git
