qemu: added qemu riscv_pmu_v2
Added qemu for varius tasks - this one involves testing sscofpmf, as
currently the only way to test it.

qemu branch should point to riscv_pmu_v2
opensbi to yadro/perf-sscofpmf
kernel to yadro/pmu-sscofpmf

- added qemu as submodule
- added script for launching qemu
- added qemu build target for Makefile

Don't try build user targets for riscv as it will fail.

Enjoy testing full perf support.

Signed-off-by: Nikita Shubin <n.shubin@yadro.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "klibc"]
 	path = klibc
 	url = git://git.kernel.org/pub/scm/libs/klibc/klibc.git
+[submodule "qemu"]
+	path = qemu
+	url = https://gitlab.com/qemu-project/qemu.git
