--- a/configs/u-boot/configs/sifive_unmatched_defconfig
+++ b/configs/u-boot/configs/sifive_unmatched_defconfig
@@ -41,6 +41,8 @@ CONFIG_NVME=y
 CONFIG_PCI=y
 CONFIG_PCIE_DW_SIFIVE=y
 CONFIG_DM_RESET=y
+# CONFIG_SYSRESET_GPIO is not set
+CONFIG_SYSRESET_SBI=y
 CONFIG_USB=y
 CONFIG_DM_USB=y
 CONFIG_USB_XHCI_HCD=y
