unmatched hpm update
- OpenSBI is merged we switch to master
- update linux kernel to latest with series applied:
https://patchwork.kernel.org/project/linux-riscv/list/?series=569891
https://patchwork.kernel.org/project/linux-riscv/list/?series=581071
some changes from Sifive official repo
some QoL changes for reset
- u-boot with HPM to perf bindings
- qemu sscompf rebased on 6.1

Signed-off-by: Nikita Shubin <n.shubin@yadro.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/riscv/riscv-gnu-toolchain
 [submodule "u-boot"]
 	path = u-boot
-	url = ssh://git@b.yadro.com:7999/~n.shubin/u-boot-unmatched.git
+	url = https://github.com/YADRO-KNS/u-boot.git
 [submodule "opensbi"]
 	path = opensbi
 	url = https://github.com/YADRO-KNS/opensbi.git
@@ -18,5 +18,5 @@
 	url = git://git.kernel.org/pub/scm/libs/klibc/klibc.git
 [submodule "qemu"]
 	path = qemu
-	url = ssh://git@b.yadro.com:7999/~n.shubin/qemu.git
+	url = https://github.com/maquefel/qemu.git
 	#url = https://gitlab.com/qemu-project/qemu.git
